--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 version: '{branch}{build}'
 pull_requests:
   do_not_increment_build_number: true
+skip_tags: true
 configuration: Release
 environment:
   COVERALLS_REPO_TOKEN:
