--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -42,6 +42,8 @@
     </Compile>
     <Compile Include="Analyzers\Analyzer.cs" />
     <Compile Include="Analyzers\Differentiator.cs" />
+    <Compile Include="Analyzers\Formatters\CommonFormatter.cs" />
+    <Compile Include="Analyzers\Formatters\IFormatter.cs" />
     <Compile Include="Analyzers\IAnalyzer.cs" />
     <Compile Include="Analyzers\Simplifier.cs" />
     <Compile Include="Builder.cs" />
