--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Analyzers\Simplifier.cs" />
     <Compile Include="Builder.cs" />
     <Compile Include="DefaultDependencyResolver.cs" />
+    <Compile Include="Expressions\CachedBinaryExpression.cs" />
+    <Compile Include="Expressions\CachedUnaryExpression.cs" />
     <Compile Include="Expressions\Ceil.cs" />
     <Compile Include="Expressions\ComplexNumbers\ComplexNumber.cs" />
     <Compile Include="Expressions\ComplexNumbers\Conjugate.cs" />
