--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Expressions\Floor.cs" />
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\Hyperbolic\HyperbolicExpression.cs" />
+    <Compile Include="Expressions\IChangedExpession.cs" />
     <Compile Include="Expressions\LCM.cs" />
     <Compile Include="Expressions\Collections\FunctionCollection.cs" />
     <Compile Include="Expressions\Collections\Parameter.cs" />
