--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,9 @@ configuration: Release
 environment:
   COVERALLS_REPO_TOKEN:
     secure: YI6EFXDLg4sSRbxxqZdTI21IAWMt55JfDTTDpA6ljw7zq5UmXi9x5vbagzua5hqe
+nuget:
+  project_feed: true
+  disable_publish_on_pr: true
 before_build:
 - cmd: nuget restore xFunc.sln
 build:
@@ -17,4 +20,9 @@ after_build:
 
     packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 test: off
-deploy: off
+deploy:
+- provider: NuGet
+  api_key:
+    secure: Wvb1TWmJaKAdppWXTK7krIPA7tF6sq7ImNKp3wj945E=
+  symbol_server: https://ci.appveyor.com/nuget/sys27/api/v2/package
+  artifact: /.*\.symbols\.nupkg/
