--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,9 @@ after_build:
 
     packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 test: off
+artifacts:
+- path: '**\*.nupkg'
+  name: NuGet Packages
 deploy:
 - provider: NuGet
   api_key:
