--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,11 +21,15 @@ after_build:
     packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 test: off
 artifacts:
-- path: '**\*.nupkg'
-  name: NuGet Packages
+- path: '**\xFunc.Maths.nupkg'
+  name: xFunc.Math Package
+- path: '**\xFunc.UnitConverters.nupkg'
+  name: xFunc.UnitConverters Package
+- path: /.*\.symbols\.nupkg/
+  name: Symbols
 deploy:
 - provider: NuGet
   api_key:
     secure: Wvb1TWmJaKAdppWXTK7krIPA7tF6sq7ImNKp3wj945E=
   symbol_server: https://ci.appveyor.com/nuget/sys27/api/v2/package
-  artifact: /.*\.symbols\.nupkg/
+  artifact: xFunc.Math Package, xFunc.UnitConverters Package, Symbols
