--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,8 @@ before_build:
 - cmd: nuget restore xFunc.sln
 build:
   project: xFunc.sln
+  publish_nuget: true
+  publish_nuget_symbols: true
   verbosity: minimal
 after_build:
 - cmd: >-
@@ -22,13 +24,6 @@ test: off
 artifacts:
 - path: '**\xFunc.*.nupkg'
   name: Packages
-- path: '**\xFunc.*.symbols.nupkg'
-  name: Symbols
-before_deploy:
-- cmd: >-
-    nuget pack xFunc.Maths/xFunc.Maths.csproj
-
-    nuget pack xFunc.UnitConverters/xFunc.UnitConverters.csproj
 deploy:
 - provider: NuGet
   server: https://ci.appveyor.com/nuget/sys27/api/v2/package
@@ -36,4 +31,4 @@ deploy:
     secure: Wvb1TWmJaKAdppWXTK7krIPA7tF6sq7ImNKp3wj945E=
   skip_symbols: false
   symbol_server: https://ci.appveyor.com/nuget/sys27/api/v2/package
-  artifact: '**\xFunc.*.nupkg'
+  artifact: Packages
