--- a/xFunc.UnitConverters/xFunc.UnitConverters.nuspec
+++ b/xFunc.UnitConverters/xFunc.UnitConverters.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>xFunc.UnitConverters</id>
-        <version>3.2.0</version>
+        <version>$version$</version>
         <authors>Dmitry Kischenko</authors>
         <owners>Dmitry Kischenko</owners>
         <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
