--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,9 +21,6 @@ after_build:
 
     packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 test: off
-artifacts:
-- path: '*.nupkg'
-  name: Packages
 deploy:
 - provider: NuGet
   server: https://ci.appveyor.com/nuget/sys27/api/v2/package
@@ -31,4 +28,4 @@ deploy:
     secure: Wvb1TWmJaKAdppWXTK7krIPA7tF6sq7ImNKp3wj945E=
   skip_symbols: false
   symbol_server: https://ci.appveyor.com/nuget/sys27/api/v2/package
-  artifact: Packages
+  artifact: /xFunc.*\.nupkg/
