--- a/xFunc.UnitConverters/xFunc.UnitConverters.nuspec
+++ b/xFunc.UnitConverters/xFunc.UnitConverters.nuspec
@@ -8,9 +8,9 @@
         <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
         <projectUrl>http://xfunc.codeplex.com/</projectUrl>
         <iconUrl>http://download-codeplex.sec.s-msft.com/Download?ProjectName=xfunc&amp;DownloadId=639207&amp;Build=20266</iconUrl>
-        <description>Changes in converters.xFunc.UnitConverters is a free conversion library (area, length, mass, power, temperature, time, volume and etc.).</description>
-        <releaseNotes>No changes.</releaseNotes>
-        <copyright>Copyright 2012-2016 Dmitry Kischenko</copyright>
+        <description>xFunc.UnitConverters is a free conversion library (area, length, mass, power, temperature, time, volume and etc.).</description>
+        <releaseNotes></releaseNotes>
+        <copyright>Copyright 2012-2017 Dmitry Kischenko</copyright>
         <tags>Math Converter Unit Units UnitConverter</tags>
     </metadata>
     <files>
