--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ version: '{branch}{build}'
 pull_requests:
   do_not_increment_build_number: true
 skip_tags: true
+image: Visual Studio 2017
 configuration: Release
 environment:
   COVERALLS_REPO_TOKEN:
