--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Expressions\Del.cs" />
     <Compile Include="Expressions\Mod.cs" />
     <Compile Include="Expressions\ParameterTypeMismatchException.cs" />
+    <Compile Include="Expressions\ResultIsNotSupportedException.cs" />
     <Compile Include="Expressions\Statistical\Count.cs" />
     <Compile Include="Expressions\Statistical\Product.cs" />
     <Compile Include="Expressions\Programming\AddAssign.cs" />
