--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Analyzers\Formatters\IFormatter.cs" />
     <Compile Include="Analyzers\IAnalyzer.cs" />
     <Compile Include="Analyzers\Simplifier.cs" />
+    <Compile Include="Analyzers\TypeAnalyzer.cs" />
     <Compile Include="Builder.cs" />
     <Compile Include="DefaultDependencyResolver.cs" />
     <Compile Include="Expressions\CachedResultTypeExpression.cs" />
@@ -59,7 +60,7 @@
     <Compile Include="Expressions\DelegateExpression.cs" />
     <Compile Include="Expressions\DifferentParametersExpression.cs" />
     <Compile Include="Expressions\ExpressionParameters.cs" />
-    <Compile Include="Expressions\ExpressionResultType.cs" />
+    <Compile Include="Expressions\ResultType.cs" />
     <Compile Include="Expressions\Fact.cs" />
     <Compile Include="Expressions\Floor.cs" />
     <Compile Include="Expressions\GCD.cs" />
