--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Expressions\UnaryTest.cs" />
     <Compile Include="Expressions\UndefineTest.cs" />
     <Compile Include="Expressions\UserFunctionTest.cs" />
+    <Compile Include="Expressions\VariableTest.cs" />
     <Compile Include="MathLexerTest.cs" />
     <Compile Include="MathParameterCollectionTest.cs" />
     <Compile Include="MathParserTest.cs" />
