--- a/xFunc.Maths/xFunc.Maths.Core.csproj
+++ b/xFunc.Maths/xFunc.Maths.Core.csproj
@@ -3,6 +3,23 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>xFunc.Maths</RootNamespace>
+    <PackageId>xFunc.Maths</PackageId>
+    <Version>3.5.0</Version>
+    <Product>xFunc.Maths</Product>
+    <Authors>Dmitry Kischenko</Authors>
+    <Company />
+    <Copyright>Copyright © 2012-2017 Dmitry Kischenko</Copyright>
+    <Description>xFunc.Maths is a simple and easy to use library that allows you to build mathematical expressions.</Description>
+    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
+    <PackageIconUrl>http://download-codeplex.sec.s-msft.com/Download?ProjectName=xfunc&amp;amp;DownloadId=639207&amp;amp;Build=20266</PackageIconUrl>
+    <PackageTags>Math Expression Expressions Parser MathParser Differentiation Simplification</PackageTags>
+    <NeutralLanguage>en</NeutralLanguage>
+    <AssemblyVersion>3.5.0</AssemblyVersion>
+    <FileVersion>3.5.0</FileVersion>
+    <RepositoryUrl>https://github.com/sys27/xFunc</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +28,15 @@
 
   <ItemGroup>
     <None Remove="xFunc.Maths.nuspec" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE" Link="LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\NOTICE" Link="NOTICE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
