--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,9 +18,9 @@ build:
   verbosity: minimal
 after_build:
 - cmd: >-
-    packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.1.0\tools\xunit.console.x86.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -excludebyattribute:*.ExcludeFromCodeCoverage*^ -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource -[xFunc.*]*Exception"
+    packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.3.0-beta5-build3769\tools\net452\xunit.console.x86.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -excludebyattribute:*.ExcludeFromCodeCoverage*^ -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource -[xFunc.*]*Exception"
 
-    packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+    packages\coveralls.io.1.4.1\tools\coveralls.net.exe --opencover coverage.xml
 deploy:
 - provider: NuGet
   server: https://ci.appveyor.com/nuget/sys27/api/v2/package
