--- a/xFunc.Tests/packages.config
+++ b/xFunc.Tests/packages.config
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.1.1" targetFramework="net45" />
-  <package id="coveralls.io" version="1.3.4" targetFramework="net45" />
+  <package id="coveralls.io" version="1.4.1" targetFramework="net45" />
   <package id="Moq" version="4.7.99" targetFramework="net45" />
   <package id="OpenCover" version="4.6.519" targetFramework="net45" />
-  <package id="ReportGenerator" version="2.5.11" targetFramework="net45" />
-  <package id="xunit" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.runner.console" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
+  <package id="ReportGenerator" version="3.0.0" targetFramework="net45" />
+  <package id="xunit" version="2.3.0-beta5-build3769" targetFramework="net47" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net47" />
+  <package id="xunit.assert" version="2.3.0-beta5-build3769" targetFramework="net47" />
+  <package id="xunit.core" version="2.3.0-beta5-build3769" targetFramework="net47" />
+  <package id="xunit.extensibility.core" version="2.3.0-beta5-build3769" targetFramework="net47" />
+  <package id="xunit.extensibility.execution" version="2.3.0-beta5-build3769" targetFramework="net47" />
+  <package id="xunit.runner.console" version="2.3.0-beta5-build3769" targetFramework="net47" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.3.0-beta5-build3769" targetFramework="net47" developmentDependency="true" />
 </packages>
