--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,10 @@
         "**/.DS_Store": true,
         "**/.vs": true,
         "**/bin": true,
-        "**/out": true,
+        "**/obj": true,
         "**/packages": true,
         "**/coverage": true,
+        "**/SharedCode": true,
         "coverage.xml": true,
         "xFunc": true,
         "xFunc (Libs for .Net 4.0).sln": true,
