--- a/xFunc.Maths/xFunc.Maths.Core.csproj
+++ b/xFunc.Maths/xFunc.Maths.Core.csproj
@@ -20,6 +20,8 @@
     <RepositoryUrl>https://github.com/sys27/xFunc</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
