--- a/xFunc.Maths/xFunc.Maths.nuspec
+++ b/xFunc.Maths/xFunc.Maths.nuspec
@@ -10,10 +10,11 @@
         <iconUrl>http://download-codeplex.sec.s-msft.com/Download?ProjectName=xfunc&amp;DownloadId=639207&amp;Build=20266</iconUrl>
         <description>xFunc.Maths is a simple and easy to use library that allows you to build mathematical expressions.</description>
         <releaseNotes></releaseNotes>
-        <copyright>Copyright 2012-2017 Dmitry Kischenko</copyright>
+        <copyright>Copyright 2012-2018 Dmitry Kischenko</copyright>
         <tags>Math Expression Expressions Parser MathParser Differentiation Simplification</tags>
     </metadata>
     <files>
         <file src="bin\Release\net40\**.*" target="lib\net40\" />
+        <file src="bin\Release\netstandard2.0\**.*" target="lib\netstandard2.0\" />
     </files>
 </package>
