--- a/xFunc.UnitConverters/xFunc.UnitConverters.Core.csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters.Core.csproj
@@ -22,6 +22,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
