--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Expressions\AbsTest.cs" />
     <Compile Include="Expressions\AddTest.cs" />
     <Compile Include="Expressions\BinaryTest.cs" />
+    <Compile Include="Expressions\Collections\ParameterCollectionTest.cs" />
     <Compile Include="Expressions\Collections\ParameterTest.cs" />
     <Compile Include="Expressions\ComplexNumbers\ComplexNumberTest.cs" />
     <Compile Include="Expressions\ComplexNumbers\ReciprocalTest.cs" />
